# terps

./: .gitignore  CMakeLists.txt  README
advsys/: advint.c  glkstart.c
cheapglk/: CMakeLists.txt
cmake/Modules/: Compilers.cmake
glkterm/: CMakeLists.txt
glktermw/: CMakeLists.txt
jacl/: jacl.c
nanoglk/: CMakeLists.txt  stubs.c
nitfol/: startunix.c
remglk/: CMakeLists.txt
tads/: CMakeLists.txt  osglk.c
tads/tads2/: h_le_c11.h
tads/tads3/: .tct3stm.cpp.swp
xglk/: CMakeLists.txt
